# filestore

./: README.md
api/: README.md  pyproject.toml
api/frieles_api/: __main__.py  settings.py
api/frieles_api/app/: dependencies.py  routes.py  schemas.py
core/: README.md  pyproject.toml
core/frieles/: __init__.py  errors.py  schemas.py  settings.py  store.py  utils.py
core/frieles/stores/: __init__.py  base.py  local_store.py  mongo_store.py  s3_store.py
