[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["frieles_api"]
namespaces = false

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[project]
name = "frieles_api"
authors = [
    { name = "TeiaLabs", email = "contato@teialabs.com" }
]
description = "Store and retrieve files from different sources through a REST API."
readme = "README.md"
requires-python= ">=3.12"
keywords = ["mongo", "s3", "file", "store"]
dynamic = ["version"]
dependencies = [
    "pydantic==2.6.4",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.1",
    "boto3==1.34.85",
    "redbaby==1.0.2",
    "fastapi==0.109.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "pytest-cov",
]
local = [
    "./core" # Install core package locally given that the command is ran at the root of the repository
]
remote = [
    "frieles@git+ssh://git@github.com/......" # Install core package from a remote repository
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=frieles_api", "--cov-report=html"]

[tool.coverage.run]
source = ["frieles_api"]
omit = ["__init__.py"]