[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["frieles"]
namespaces = false

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[project]
name = "frieles"
authors = [
    { name = "TeiaLabs", email = "contato@teialabs.com" }
]
description = "Store and retrieve files from different sources with simple interface."
readme = "README.md"
requires-python= ">=3.12"
keywords = ["mongo", "s3", "file", "store"]
dynamic = ["version"]
dependencies = [
    "pydantic==2.6.4",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.1",
    "boto3==1.34.85",
    "redbaby==1.0.2"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=frieles", "--cov-report=html"]

[tool.coverage.run]
source = ["frieles"]
omit = ["__init__.py"]